# automata

./: .gitignore  Cargo.toml  Changes.md  README.md  Readme.md
src/: deterministic.rs  dfa.rs  dma.rs  dot.rs  lib.rs  nfa.rs  nondeterministic.rs  regex.rs
