[package]
name = "automata"
version = "0.0.3"
authors = ["HeroicKatora <andreas.molzer@tum.de>"]

# All the human facing meta information
description = "An implementation of standard finite state automata such as DFA, NFA, Regex"
repository = "https://github.com/HeroicKatora/automata"
readme = "Readme.md"
keywords = ["dfa", "nfa", "regex", "finite"]
categories = ["parsing", "data-structures", "algorithms"]
license = "MIT"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]

[features]
# Feature for experiments that don't have any widespread papers available. To my knowledge.
self_experiments = []
